# peripheral-io

./: CMakeLists.txt  LICENSE.APLv2  capi-system-peripheral-io.pc.in
doc/: peripheral_io_doc.h
include/: peripheral_common.h  peripheral_dbus.h  peripheral_gdbus.h  peripheral_gdbus_adc.h  peripheral_gdbus_gpio.h  peripheral_gdbus_i2c.h  peripheral_gdbus_pwm.h  peripheral_gdbus_spi.h  peripheral_gdbus_uart.h  peripheral_handle.h  peripheral_internal.h  peripheral_io.h  peripheral_log.h
include/gdbus/: peripheral_gdbus.h  peripheral_gdbus_adc.h  peripheral_gdbus_common.h  peripheral_gdbus_gpio.h  peripheral_gdbus_i2c.h  peripheral_gdbus_pwm.h  peripheral_gdbus_spi.h  peripheral_gdbus_uart.h
include/interface/: gpio.h  i2c.h  peripheral_interface_adc.h  peripheral_interface_common.h  peripheral_interface_gpio.h  peripheral_interface_i2c.h  peripheral_interface_pwm.h  peripheral_interface_spi.h  peripheral_interface_uart.h  pwm.h  spi.h  uart.h
packaging/: capi-system-peripheral-io.spec
src/: peripheral_adc.c  peripheral_dbus.c  peripheral_gdbus_adc.c  peripheral_gdbus_gpio.c  peripheral_gdbus_i2c.c  peripheral_gdbus_pwm.c  peripheral_gdbus_spi.c  peripheral_gdbus_uart.c  peripheral_gpio.c  peripheral_i2c.c  peripheral_io.xml  peripheral_pwm.c  peripheral_spi.c  peripheral_uart.c
src/gdbus/: peripheral_gdbus_adc.c  peripheral_gdbus_gpio.c  peripheral_gdbus_i2c.c  peripheral_gdbus_pwm.c  peripheral_gdbus_spi.c  peripheral_gdbus_uart.c  peripheral_io.xml
src/interface/: gpio.c  i2c.c  peripheral_interface_adc.c  peripheral_interface_gpio.c  peripheral_interface_i2c.c  peripheral_interface_pwm.c  peripheral_interface_spi.c  peripheral_interface_uart.c  pwm.c  spi.c  uart.c
src/interface/include/: i2c.h  pwm.h  uart.h
test/: CMakeLists.txt  peripheral-io-test.c  test.c
test/include/: test_peripheral_adc.h  test_peripheral_gpio.h  test_peripheral_i2c.h  test_peripheral_pwm.h  test_peripheral_spi.h  test_peripheral_uart.h
test/samples/: mma7455.c
test/samples/include/: mma7455.h
test/src/: test_peripheral_adc.c  test_peripheral_gpio.c  test_peripheral_i2c.c  test_peripheral_pwm.c  test_peripheral_spi.c  test_peripheral_uart.c
